--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "KJSHAH",
-  "name": "Kathan Jay Shah",
+  "short_name": "PALPATEL",
+  "name": "Pal Patel",
   "icons": [
     {
       "src": "favicon.ico",
